--- a/.github/workflows/POC.yml
+++ b/.github/workflows/POC.yml
@@ -14,13 +14,13 @@
 #             - '.github/workflows/*'
 # jobs:
 #     Code_Checkout:
-#         runs-on: ubuntu-latest
+#         runs-on: self-hosted
 #         steps:
 #             - name: Code Checkout
 #               uses: actions/checkout@v3
 #     Environment_Initialization:
 #         needs: Code_Checkout
-#         runs-on: ubuntu-latest
+#         runs-on: self-hosted
 #         steps:
 #             - name: Upgrade pip
 #               run: python -m pip install --upgrade pip
@@ -34,9 +34,9 @@
 #                 python -m pip install awscli
 #     Setup_DataBricks:
 #         needs: Environment_Initialization
-#         runs-on: ubuntu-latest
+#         runs-on: self-hosted
 #         steps:
 #             - name: install-databricks-cli
 #               uses: microsoft/install-databricks-cli@v1.0.0
 #             - name: setup databricks
-#               github
+#               uses: 
