--- a/.github/workflows/EDP-devops-s3-upload-test-file-poc.yml
+++ b/.github/workflows/EDP-devops-s3-upload-test-file-poc.yml
@@ -1,4 +1,4 @@
-name: EDP-devops-s3-upload-test-file-poc
+name: AWS Operations Workflow
 
 on: 
   workflow_dispatch:
@@ -16,31 +16,36 @@ jobs:
     env:
       BUCKET_NAME: ${{ github.event.inputs.bucket_name }}
       REGION_ID: ${{ github.event.inputs.region_id }}
-      KMS_KEY: ${{ secrets.KMS_KEY }}
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ github.event.inputs.region_id }}
-
     - name: List S3 Bucket
-      run: aws s3 ls s3://${{ env.BUCKET_NAME }}/ --region ${{ env.REGION_ID }} --cli-connect-timeout 10
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ github.event.inputs.region_id }}
+      run: aws s3 ls s3://${{ env.BUCKET_NAME }}/
 
     - name: Upload file to AWS S3
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ github.event.inputs.region_id }}
+        KMS_KEY: ${{ secrets.KMS_KEY }}
       run: |
         echo "test" > /tmp/test.txt
-        aws s3 cp /tmp/test.txt s3://${{ env.BUCKET_NAME }}/test22.txt --region ${{ env.REGION_ID }} --sse aws:kms --sse-kms-key-id alias/${{ env.KMS_KEY }} --cli-connect-timeout 10
+        aws s3 cp /tmp/test.txt s3://${{ env.BUCKET_NAME }}/test22.txt --sse aws:kms --sse-kms-key-id alias/${{ env.KMS_KEY }}
 
     - name: Wait to check
       run: |
-        echo "Waiting 5 minutes to check that file is in the S3 bucket"
+        echo "Waiting 5 minutes to check that file is in S3 bucket"
         sleep 300
 
     - name: Delete AWS S3 file
-      run: aws s3 rm s3://${{ env.BUCKET_NAME }}/test22.txt --region ${{ env.REGION_ID }}
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_DEFAULT_REGION: ${{ github.event.inputs.region_id }}
+      run: aws s3 rm s3://${{ env.BUCKET_NAME }}/test22.txt
