--- a/.github/workflows/EDP-devops-s3-upload-test-file-poc.yml
+++ b/.github/workflows/EDP-devops-s3-upload-test-file-poc.yml
@@ -39,7 +39,7 @@ jobs:
         KMS_KEY: ${{ secrets.KMS_KEY }}  # Use KMS key for server-side encryption
       run: |
         echo "hello" > $GITHUB_WORKSPACE/test.txt  # Create a simple test file in the repository workspace
-        cat test.txt
+        cat $GITHUB_WORKSPACE/test.txt
         aws s3 cp $GITHUB_WORKSPACE/test.txt s3://${{ env.BUCKET_NAME }}/test22.txt --sse aws:kms --sse-kms-key-id alias/${{ env.KMS_KEY }}  # Upload file to S3 with encryption
 
     - name: Upload test.txt as an artifact
